--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
-  <title>Ahmed Elmeskyny</title>
+  <title>Ahmed Elmeskyny || Web developer-software engineer</title>
   <style>
     .preloader {
       display: none;
@@ -77,6 +77,7 @@
       .circle {
         margin-left: 0;
       }
+    }
   </style>
 </head>
 
