--- a/public/index.html
+++ b/public/index.html
@@ -81,17 +81,14 @@
 <body>
   <div class="preloader">
     <div>
-      <div id="preloader">
-        <svg class="circle" viewbox="0 0 160 160" xmlns="http://www.w3.org/2000/svg">
-          <circle class="ripple" cx="80" cy="80" r="20"></circle>
-          <circle class="ripple ripple2" cx="80" cy="80" r="40"></circle>
-        </svg>
-      </div>
-      <p>Greetings!!</p>
-      <p>Ahmed El Meskyny</p>
-      <span>Web developer - software engineering student</span>
+    <div id="preloader">
+       <img src="https://s.svgbox.net/loaders.svg?ic=bars&fill=e1ad01" width="72" height="72">
     </div>
+    <p>Greetings!!</p>
+    <p>Ahmed El Meskyny</p>
+    <span>Web developer - software engineering student</span>
   </div>
+</div>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
