--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Hi , i'am ahmed  👋 a  freelance full stack web developer based in morocco and a software engineering
+      content="Hi , i'am ahmed  👋 a  freelance full stack web developer based in morocco and a data scientist
   i enjoy building everything from small business sites to rich interactive web apps... "
     />
     <!--
